<resources>
    <string name="app_name">Doctor</string>
    <string name="services">خدمات</string>
    <string name="aboutus">درباره ما</string>
    <string name="club">باشگاه مشتریان</string>
    <string name="danestaniha">دانستنی ها</string>
    <string name="common_questions">سوالات متداول</string>
    <string name="news">اخبار</string>
    <string name="gallery_video">گالری ویدیو</string>
    <string name="gallery_image">گالری تصاویر</string>
    <string name="introduce_services">معرفی خدمات</string>
    <string name="about_clinick">درباره کلینیک</string>
    <string name="departmants">بخش های تخصصی</string>
    <string name="social_networks">شبکه های اجتماعی</string>
    <string name="tamas_bama">تماس با ما</string>
    <string name="services_prices">بها خدمات</string>
    <string name="insurance">بیمه ها</string>
    <string name="cares">بیمه ها</string>
    <string name="reservation">نوبت دهی</string>
    <string name="magazines">مجله</string>
    <string name="darooha">داروها و عوارض</string>
    <string name="club_match">مسابقه</string>
    <string name="club_poll">نظرسنجی</string>
    <string name="club_moshavere">مشاوره</string>
    <string name="club_chat">چت</string>
    <string name="favorites">علاقه مندی ها</string>
    <string name="support">ارتباط با پشتیبانی</string>
    <string name="darookhane">داروخانه</string>
    <string name="introduce_to_others">معرفی به دوستان</string>
    <string name="enteghadat">انتقادات و پیشنهادات</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="estimate_cost">برآورد هزینه</string>
    <string name="menu_refresh">آپدیت</string>
    <string name="menu_send">ارسال</string>
    <string name="menu_save">ذخیره بروی دستگاه</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="error_invalid">معتبر نیست!</string>
    <string name="error_length">تعداد کاراکترها نامعتبر است.</string>
    <string name="error_empty">خالیست!</string>
    <string name="error_different">عدم تطابق!</string>
    <string name="error_internet">لطفا دستگاه خود را به اینترنت متصل کنید!</string>
    <string name="error_server">خطا از سرور! لطفا بعدا مجددا تلاش کنید.</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_permission">
            در صورت نپذیرفتن دسترسی شما نمیتوانید از برنامه استفاده کنید!! \n\n
            لطفا در تنظیمات گوشی قسمت دسترسی ها آن را فعال نمایید.
        </string>
    <string name="error_nework">تلاش برای اتصال به اینترنت</string>
    <string name="error_empty_list">لیست علاقمندی های شما خالیست!</string>
    <string name="error_empty_server">داده ای جهت نمایش وجود ندارد!</string>
    <string name="prompt_name">نام و نام خانوادگی</string>
    <string name="prompt_meli">شماره ملی بدون خط فاصله</string>
    <string name="prompt_phone">شماره تماس</string>
    <string name="prompt_email">ایمیل</string>
    <string name="prompt_title">عنوان</string>
    <string name="prompt_message">شرح پیام</string>
    <string name="prompt_download">در حال دانلود...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="company_tell">026 - 32522222</string>
    <string name="company_address">کرج - چهارراه کارخانه قند - میدان شهید فهمیده - ساختمان بیمه - واحد 1</string>
    <string name="title_activity_common_questions">CommonQuestionsActivity</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="befor_operation">مراقبت های قبل عمل</string>
    <string name="after_operation">مراقبت های بعد عمل</string>
    <string name="reject_result">نوبت شما رد شد</string>
    <string name="accepted_result">نوبت شما ثبت گردید</string>
    <string name="sent_successfully">پیام شما با موفقیت ارسال شد</string>
    <string name="sent_failed">پیام شما ارسال نشد</string>


</resources>
