<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">
    <!--Root-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">
        <!--toolbar-->
        <include
            android:id="@+id/toolbar"
            layout="@layout/appbar_color" />
        <!--other layers of view-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:gravity="center">
                    <!--name family-->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til1_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_stroke_blue"
                        fontPath="fonts/SansLight.ttf">

                        <EditText
                            android:id="@+id/edtName_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:gravity="right"
                            fontPath="fonts/SansLight.ttf" />
                    </android.support.design.widget.TextInputLayout>
                    <!--email-->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til3_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_stroke_blue"
                        fontPath="fonts/SansLight.ttf">

                        <EditText
                            android:id="@+id/edtEmail_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:gravity="right"
                            fontPath="fonts/SansLight.ttf" />
                    </android.support.design.widget.TextInputLayout>
                    <!--phone-->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til2_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_stroke_blue"
                        fontPath="fonts/SansLight.ttf">

                        <EditText
                            android:id="@+id/edtPhone_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_phone"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:gravity="right"
                            fontPath="fonts/SansLight.ttf" />
                    </android.support.design.widget.TextInputLayout>
                    <!--title-->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til4_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_stroke_blue"
                        fontPath="fonts/SansLight.ttf">

                        <EditText
                            android:id="@+id/edtTitle_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_title"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:gravity="right"
                            fontPath="fonts/SansLight.ttf" />
                    </android.support.design.widget.TextInputLayout>
                    <!--context of message-->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til5_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/shape_stroke_blue"
                        fontPath="fonts/SansLight.ttf">

                        <EditText
                            android:id="@+id/edtMessage_form"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:hint="@string/prompt_message"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:gravity="right"
                            fontPath="fonts/SansLight.ttf" />
                    </android.support.design.widget.TextInputLayout>
                    <!--commit button-->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ثبت پیام"
                        android:background="@drawable/shape_buttom_blue"
                        android:id="@+id/btnConfirm_from"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/White"
                        fontPath="fonts/SansLight.ttf" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>



