<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    android:weightSum="1">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/drawer_icon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:src="@drawable/ic_drawer"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:background="@color/Orange">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/mainactivity_4cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp">

                <LinearLayout
                    android:id="@+id/linear_abov"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/White"
                        app:cardCornerRadius="4dp"
                        android:layout_gravity="right"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <ImageView
                                android:id="@+id/card_view1_image"
                                android:layout_width="@dimen/_35sdp"
                                android:layout_height="@dimen/_35sdp"
                                android:src="@drawable/ic_aboutus"
                                android:layout_centerInParent="true"/>

                            <TextView
                                android:id="@+id/card_view1_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/aboutus"
                                android:layout_below="@+id/card_view1_image"
                                android:layout_marginTop="@dimen/_12sdp"
                                android:textStyle="bold"
                                fontPath="fonts/SansLight.ttf"/>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v4.widget.Space
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="match_parent"/>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/White"
                        app:cardCornerRadius="4dp"
                        android:layout_gravity="right"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <ImageView
                                android:id="@+id/card_view2_image"
                                android:layout_width="@dimen/_35sdp"
                                android:layout_height="@dimen/_35sdp"
                                android:src="@drawable/ic_services"
                                android:layout_centerInParent="true"/>

                            <TextView
                                android:id="@+id/card_view2_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/services"
                                android:layout_below="@+id/card_view2_image"
                                android:layout_marginTop="@dimen/_12sdp"
                                android:textStyle="bold"
                                fontPath="fonts/SansLight.ttf"/>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"/>
                <LinearLayout
                    android:id="@+id/linear_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/White"
                        app:cardCornerRadius="4dp"
                        android:layout_gravity="right"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <ImageView
                                android:id="@+id/card_view3_image"
                                android:layout_width="@dimen/_35sdp"
                                android:layout_height="@dimen/_35sdp"
                                android:src="@drawable/ic_club"
                                android:layout_centerInParent="true"/>

                            <TextView
                                android:id="@+id/card_view3_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/club"
                                android:layout_below="@+id/card_view3_image"
                                android:layout_marginTop="@dimen/_12sdp"
                                fontPath="fonts/SansLight.ttf"
                                android:textStyle="bold"/>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v4.widget.Space
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="match_parent"/>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/White"
                        app:cardCornerRadius="4dp"
                        android:layout_gravity="right"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <ImageView
                                android:id="@+id/card_view4_image"
                                android:layout_width="@dimen/_35sdp"
                                android:layout_height="@dimen/_35sdp"
                                android:src="@drawable/ic_danestaniha"
                                android:layout_centerInParent="true"/>

                            <TextView
                                android:id="@+id/card_view4_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/danestaniha"
                                android:layout_below="@+id/card_view4_image"
                                android:layout_marginTop="@dimen/_12sdp"
                                fontPath="fonts/SansLight.ttf"
                                android:textStyle="bold"/>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


            </LinearLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/switch_btn"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_switch"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
